5-istio/req-authn-jwt-ingress.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: ingress-jwt
  namespace: istio-system                                                                                     
spec:                                                                                                         
  selector:                                                                                                   
    matchLabels:                                                                                              
      istio: ingressgateway                                                                                   
  jwtRules:                                                                                                   
  - issuer: "testing@secure.istio.io"                                                                         
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.26/security/tools/jwt/samples/jwks.json"
